# teaclave

./: .asf.yaml  .licenserc.yaml  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  website-toc.md
.github/ISSUE_TEMPLATE/: config.yml
docs/: security-model.md
vm/wallet-gateway/: Cargo.toml  env.list
vm/wallet-gateway/api-server/: Cargo.toml  Dockerfile
vm/wallet-gateway/api-server/src/: main.rs
vm/wallet-gateway/authority/: Cargo.toml
vm/wallet-gateway/authority-server/: Cargo.toml  Dockerfile
vm/wallet-gateway/authority-server/src/: config.rs  console_user.rs  console_wallet_info.rs  error.rs  file_utils.rs  main.rs  state_manager.rs  tee_status_for_client.rs
vm/wallet-gateway/authority/src/: device_registry.rs  lib.rs  user_registry.rs
vm/wallet-gateway/certs/scripts/: install_certs.sh
vm/wallet-gateway/config/: Cargo.toml  runtime_config_example.toml
vm/wallet-gateway/config/src/: lib.rs  runtime.rs
vm/wallet-gateway/credential-manager/: Cargo.toml
vm/wallet-gateway/credential-manager/src/: lib.rs
vm/wallet-gateway/db-manager/: Cargo.toml
vm/wallet-gateway/db-manager/src/: db_compatible_client.rs  lib.rs  local_service_client.rs  storage_client.rs
vm/wallet-gateway/db-service/: Cargo.toml  Dockerfile
vm/wallet-gateway/db-service/src/: main.rs
vm/wallet-gateway/net/: Cargo.toml
vm/wallet-gateway/net/src/: lib.rs
vm/wallet-gateway/net/src/endpoints/: asset_price.rs  btc_rpc.rs  eth_payment.rs  eth_rpc.rs  mail.rs  mod.rs
vm/wallet-gateway/net/src/endpoints/params/: erc20.rs  gas.rs  infura.rs  mod.rs  payment.rs  utxo.rs
vm/wallet-gateway/notification/: Cargo.toml
vm/wallet-gateway/notification/src/: email_event.rs  email_task.rs  email_template.rs  lib.rs
vm/wallet-gateway/share/attestation/: Cargo.toml
vm/wallet-gateway/share/attestation/src/: lib.rs
vm/wallet-gateway/share/basic_utils/: Cargo.toml
vm/wallet-gateway/share/basic_utils/src/: random.rs
vm/wallet-gateway/share/crypto/: Cargo.toml
vm/wallet-gateway/share/proto/: Cargo.toml
vm/wallet-gateway/share/types/: Cargo.toml
vm/wallet-gateway/share/types/src/share/: basic_types.rs  network.rs
vm/wallet-gateway/storable/: Cargo.toml
vm/wallet-gateway/storable/src/: account_to_wallet.rs  address_book.rs  balance.rs  committed_config.rs  credential.rs  currency.rs  delegation.rs  device_info.rs  fee.rs  gas_price.rs  legacy_tx.rs  lib.rs  nickname.rs  pending_tx.rs  received_payment.rs  subscription.rs  synced_wallet.rs  tee_status.rs  tx_history.rs  user_info.rs  utxo_record.rs
vm/wallet-gateway/storable/src/console/: mod.rs  wallet.rs
vm/wallet-gateway/task-exec/: Cargo.toml
vm/wallet-gateway/task-exec/src/: lib.rs
vm/wallet-gateway/task-runner-normal/: Cargo.toml  Dockerfile
vm/wallet-gateway/task-runner-normal/src/: main.rs
vm/wallet-gateway/task-runner-normal/src/task/: asset_price.rs  balance.rs  email_notify.rs  gas_price.rs  mod.rs  received_payment.rs  sync_utxos.rs
vm/wallet-gateway/task-runner-tee/: Cargo.toml  Dockerfile
vm/wallet-gateway/task-runner-tee/src/: main.rs
vm/wallet-gateway/task-runner-tee/src/task/: mod.rs  sync_tee_status.rs  sync_wallets.rs  tx_delegation.rs
vm/wallet-gateway/tls-client-processing/: Cargo.toml
vm/wallet-gateway/tls-client-processing/src/: lib.rs
vm/wallet-gateway/types-client/: Cargo.toml
vm/wallet-gateway/types-client/src/: additional_info.rs  approval_chain.rs  balance.rs  fee.rs  lib.rs  received_payment.rs  transfer.rs  tx.rs  wallet.rs
vm/wallet-gateway/utils/: Cargo.toml
vm/wallet-gateway/utils/src/: lib.rs  logger.rs
vm/wallet-gateway/webapi/: Cargo.toml
vm/wallet-gateway/webapi/src/: auth_data.rs  coin_selection.rs  config.rs  lib.rs  state_manager.rs  tx_transfer.rs
