# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "authority-server"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
actix-web = { version = "4.3" }
actix-web-lab = "0.19"
actix-files = "0.6"
actix-cors = "0.6"
tokio-rustls = "=0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hex = "0.1.0"
serde_derive = "1.0"
serde_with = "3.8"
env_logger = "0.10" 
log = "0.4"
#rustls = { version = "0.21", features = ["dangerous_configuration"]}
#rustls-pemfile = "1"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "=1.3.0", features = ["serde", "v4"] }
hex = { version = "0.4", features = ["serde"] }
bincode = "1.3.3"
url = { version = "2.1.1", features = ["serde"] }
oauth2 = "4.4"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }

types = { path = "../share/types" }
proto = { path = "../share/proto" }
utils = { path = "../utils" }
storable = { path = "../storable" }
authority = { path = "../authority" }
ck_config = { path = "../config" }
tls-client-processing = { path = "../tls-client-processing" }
db-manager = { path = "../db-manager" }
credential-manager = { path = "../credential-manager" }
