# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
serde_json = "1.0"
url = { version = "2.1.1", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
ethabi = "14.0.0"
hex = { version = "0.4", features = ["serde"] }
serde-hex = "0.1.0"
enum-iterator = "1.4.1"
async-trait = "0.1.74"
tokio = { version = "1.0", features = ["macros"] }

types = { path = "../share/types" }
storable = { path = "../storable" }
utils = { path = "../utils" }
notification = { path = "../notification" }
