# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock = []

[dependencies]
actix-web = { version = "4.3" }
actix-web-lab = "0.19"
actix-files = "0.6"
actix-cors = "0.6"
tokio-rustls = "=0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10" 
log = "0.4"
rustls = { version = "0.21", features = ["dangerous_configuration"]}
rustls-pemfile = "1"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "=1.3.0", features = ["serde", "v4"] }
hex = { version = "0.4", features = ["serde"] }
serde-hex = "0.1.0"
serde_derive = "1.0"
serde_with = "3.8"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
bincode = "1.3.3"
url = { version = "2.1.1", features = ["serde"] }
oauth2 = "4.4"
ethabi = "14.0.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rand = "0.8"
enum-iterator = "1.4.1"
bitcoin = {version = "0.31.1", features = ["serde"]}
bdk_coin_select = "0.2.0"

authority = { path = "../authority" }
tls-client-processing = { path = "../tls-client-processing" }
proto = { path = "../share/proto" }
ck_config = { path = "../config" }
types = { path = "../share/types" }
db-manager = { path = "../db-manager" }
storable = { path = "../storable" }
utils = { path = "../utils" }
net = { path = "../net" }
credential-manager = { path = "../credential-manager" }
client-info = { path = "../types-client" }
notification = { path = "../notification" }
