# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "types"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "Data structures and functions shared by host and TA."
edition = "2018"

[features]
default = []
testnet = []

[dependencies]
basic_utils = { path = "../basic_utils" }

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = { version = "1.14", features = ["macros"], default-features = false }
serde-hex = "0.1.0"
hex = { version = "0.4", features = ["serde"] }
uuid = { version = "=1.3.0", features = ["serde"], default-features = false }
anyhow = "1.0"
enum-iterator = "1.4.1"
url = { version = "2.1.1", features = ["serde"]}
secp256k1 = "0.28"
bitcoin = { version = "0.31.1", features = ["serde", "no-std"], default-features = false }
bincode = "1.3"
ethereum-tx-sign = "=6.1.0"
rust_decimal = "=1.26.0"
bip39 = { version = "2.0.0", default-features = false }
ethabi = "14.0.0"
bdk_coin_select = "0.2.0"